---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1092                                 -
---------------------------------------------
- 2021-05-06                                -
---------------------------------------------
.: WSM: Task: Pre-order through local website or link to other website (WSM-232)

---------------------------------------------
- 2021-04-17                                -
---------------------------------------------
.: WSM: Task: Add delivery and price (WSM-333)

---------------------------------------------
- 2021-04-03                                -
---------------------------------------------
.: WSW: Task: Receipt module to list, filter receipts and the store page details (WSW-100)

- v1.0.1091                                 -
---------------------------------------------
- 2021-03-28                                -
---------------------------------------------
.: WSM: Task: Able to add numbers of promotion (WSM-318)
.: WSM: Task: View name in invoice card (WSM-313)
.: WSM: Task: Fix to remove group when empty invoices (WSM-320)

---------------------------------------------
- 2021-03-26                                -
---------------------------------------------
.: WSM: Task: Allow empty last name (WSM-313)
.: WSM: Task: Preview with customer name in daily sales (WSM-314)
.: WSM: Task: Discount with showing minor symbol in invoice (WSM-316)
.: WSM: Task: Completed invoice is not found over 25 items (WSM-321)
.: WSM: Task: Refactoring grouping invoices (WSM-320)

- v1.0.1090                                 -
---------------------------------------------
- 2021-03-21                                -
---------------------------------------------
.: WSM: BugFix: Save item and type not working (WSM-308)

---------------------------------------------
- 2021-03-20                                -