@@ -4,6 +4,11 @@
 
 - v1.0.1092                                 -
 ---------------------------------------------
+- 2021-05-08                                -
+---------------------------------------------
+.: WSM: Task: Update invoice-setup to show check (WSM-232)
+
+---------------------------------------------
 - 2021-05-06                                -
 ---------------------------------------------
 .: WSM: Task: Pre-order through local website or link to other website (WSM-232)
